@@ -1,4 +1,9 @@
 Summary of important user-visible changes for plot 1.1.1:
 -------------------------------------------------------------------
 
+ ** The following functions are new:
+
+      calc_shading
+      implicit
+
  ** Package is no longer automatically loaded.
